--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,5 @@ spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.auto-commit=true
 
-
+server.address=0.0.0.0
+server.port=8080
